# cmake-testcode

./: CMakeLists.txt
src/: CMakeLists.txt
src/so1/: CMakeLists.txt  so1.cpp
src/so1/inc/: so1.h
src/so2/: CMakeLists.txt  so2.cpp
test/: CMakeLists.txt  test.cpp
